--- a/index.css
+++ b/index.css
@@ -12,7 +12,7 @@ body {
   background-color: #273549;
   margin: 0;
   margin-left: 15px;
-  width: 800px;
+  width: 700px;
 }
 
 h1, h3 {
@@ -78,7 +78,8 @@ p, label {
   border: 2px solid white;
   color: white;
   font-family: Inter;
-  min-width: 350px;
+  min-width: 150px;
+  max-width: 300px;
 }
 
 .passwordbox {
